--- a/readme
+++ b/readme
@@ -17,6 +17,8 @@ Requires `go` to be installed, obviously.
 
 USAGE
 
+    vite [options]
+
     A simple and minimal static site generator.
 
     options:
